<resources>
    <string name="app_name">KejaPlus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Settings fragment</string>
    <string name="select_property">Select Property</string>
    <string name="select_number_of_bedroom">Select Number of Bedroom</string>
    <string name="select_location">Select Location</string>
    <string name="add_property">Add Property</string>
    <string name="add_property_fab_button">add property fab button</string>
    <string name="image">image</string>
    <string name="choose_image">Choose Image</string>
    <string name="next">Next</string>
    <string name="upload_image">Upload Image</string>
    <string name="property_name">Property Name</string>
    <string name="condition">Condition</string>
    <string name="price">Price</string>
    <string name="contact_number">Contact Number</string>
    <string name="property_description">Property Description</string>
    <string name="complete_action_using">Complete action using</string>
    <string name="your_official_housing_adviser">Your Official Housing Adviser</string>
    <string name="home">Home</string>
    <string name="property">Add Property</string>
    <string name="settings">Settings</string>
    <string name="your_house_hunting_partner">Your House Hunting Partner</string>
    <string name="here_you_can_search">Here you can search</string>
    <string name="search_property">Search Property</string>
    <string name="property_for_you">Property for You</string>
    <string name="name_logo">Keja Plus</string>
    <string name="pref_theme_key">theme_mode</string>
    <string name="system_theme">System Theme</string>

    <string-array name="property_category">
        <item>Single Family Houses</item>
        <item>Luxury Property</item>
        <item>Vacation Homes</item>
        <item>Airbnb</item>
        <item>Town Homes</item>
        <item>Condominiums</item>
        <item>Duplex</item>
        <item>Apartment</item>
    </string-array>
    <string-array name="property_type">
        <item>Rent</item>
        <item>Purchase Unit</item>
    </string-array>

    <string-array name="number_bedroom">
        <item>Bed sitter</item>
        <item>Single room</item>
        <item>1 bedroom</item>
        <item>2 bedroom</item>
        <item>3 bedroom</item>
        <item>4 bedroom</item>
        <item>5 bedroom</item>
        <item>6 bedroom</item>
    </string-array>

    <string-array name="location">
        <item>Nairobi</item>
        <item>Muranga</item>
        <item>Mombasa</item>
        <item>Machakos</item>
        <item>Meru</item>
        <item>Naivasha</item>
        <item>Kiambu</item>
        <item>Nyeri</item>
    </string-array>

    <string-array name="condition">
        <item>Excellent</item>
        <item>Good</item>
        <item>New</item>
        <item>Old</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="submit_location">submit</string>
    <string name="title_activity_spash">SpashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description</string>
    <string name="category">Category:</string>
    <string name="apartment">Apartment</string>
    <string name="date">Date:</string>
    <string name="type">Type:</string>
    <string name="price_shilling">Price: Ksh</string>
    <string name="condition_title">Condition:</string>
    <string name="new_condition">New</string>
    <string name="ksh">Ksh</string>
    <string name="property_type">Property Type</string>

    <string name="dark_mode_def_value">1</string>
    <string-array name="dark_mode_entries">
        <item>Follow System Dark Mode</item>
        <item>Light Mode Selected</item>
        <item>Dark Mode Selected</item>
        <item>Auto Battery Dark Mode</item>
    </string-array>


        <string-array name="pref_theme_entries">
            <item>System Theme</item>
            <item>Light Mode</item>
            <item>Dark Mode</item>
            <item>Battery Saver Mode</item>
        </string-array>


    <string name="google_Signup">project-403742347559</string>

    <string-array name="dark_mode_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="channel_name">Keja Plus</string>
    <string name="channel_description">Image Uploaded to Server</string>
    <string name="notification_name">Keja Plus</string>
    <string name="notification_text">Image Uploaded Successfully</string>
    <string name="welcome_to_kejaplus">Welcome to KejaPlus</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="or_sign_up_with">or sign-up with</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="login_btn">Login</string>
    <string name="login_label">Log In</string>
    <string name="or_login_with">or Login with</string>
    <string name="logout">Logout</string>

    <string name="facebook_app_id">1100666860557271</string>
    <string name="fb_login_protocol_scheme">fb1100666860557271</string>
    <string name="facebook_client_token">093138ad7a7f7b6d34710cb4356ad2b9</string>
    <string name="more">More</string>
    <string name="mark_all_as_read">Mark All As Read</string>
    <string name="clear_all">Clear All</string>
    <string name="filter_list">filter list</string>
</resources>