<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/notification"
            android:title="@string/title_notifications"
            app:actionLayout="@layout/notification_badge"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/main_menu_mark_all_as_read"
            android:title="@string/mark_all_as_read"
            app:showAsAction="never" />

        <item
            android:id="@+id/main_menu_clear_all_notification"
            android:title="@string/clear_all"
            app:showAsAction="never" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            app:showAsAction="always"/>




</menu>