<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="?actionBarSize"

    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


    <ImageView
        android:id="@+id/view"
        android:background="@drawable/shape_bg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RelativeLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="4dp"
        android:layout_marginTop="0dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="14dp">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/personGreeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_kejaplus"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/signupLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        android:layout_marginTop="@dimen/layout_padding"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/black"
        android:text="@string/sign_up"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.KejaPlus.TextInputLayout.Outline"
        app:layout_constraintTop_toBottomOf="@id/signupLabel"
        app:boxCornerRadiusTopStart="@dimen/layout_padding"
        app:boxCornerRadiusBottomStart="@dimen/layout_padding"
        app:boxCornerRadiusTopEnd="@dimen/layout_padding"
        app:boxCornerRadiusBottomEnd="@dimen/layout_padding"
        android:layout_marginTop="@dimen/layout_top"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:startIconDrawable="@drawable/ic_user"
        app:startIconContentDescription="emailIcon"
        android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.KejaPlus.TextInputLayout.Outline"
        app:layout_constraintTop_toBottomOf="@id/nameLayout"
        app:boxCornerRadiusTopStart="@dimen/layout_padding"
        app:boxCornerRadiusBottomStart="@dimen/layout_padding"
        app:boxCornerRadiusTopEnd="@dimen/layout_padding"
        app:boxCornerRadiusBottomEnd="@dimen/layout_padding"
        android:layout_marginTop="@dimen/layout_top"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconContentDescription="emailIcon"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.KejaPlus.TextInputLayout.Outline"
        app:layout_constraintTop_toBottomOf="@id/emailLayout"
        app:boxCornerRadiusTopStart="@dimen/layout_padding"
        app:boxCornerRadiusBottomStart="@dimen/layout_padding"
        app:boxCornerRadiusTopEnd="@dimen/layout_padding"
        app:boxCornerRadiusBottomEnd="@dimen/layout_padding"
        android:layout_marginTop="@dimen/layout_top"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        app:startIconDrawable="@drawable/ic_password"
        app:startIconContentDescription="passwordIcon"
        app:endIconMode="password_toggle"
        app:endIconContentDescription="passwordToggleIcon"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        style="@style/btn_login"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:layout_marginTop="@dimen/layout_top"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="20dp"
        android:text="@string/signup"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <View
        android:id="@+id/line_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginStart="20dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signupBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signupText"
        android:layout_marginEnd="@dimen/edit_text_padding"/>

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/layout_padding"
        android:text="@string/or_sign_up_with"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signupBtn"
        android:textStyle="bold"
        />
    <View
        android:id="@+id/line_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginStart="@dimen/edit_text_padding"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signupBtn"
        app:layout_constraintStart_toEndOf="@id/signupText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/google"
        style="@style/google_signIn_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_1"
        app:icon="@drawable/ic_google"
        app:backgroundTint="@color/google_red_color">
    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_up_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/facebook_btn"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginTop="16dp"
        android:text="@string/facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_1"
        app:icon="@drawable/ic_facebook"
        app:backgroundTint="@color/facebookBlue">
    </com.google.android.material.button.MaterialButton>


    <TextView
        android:id="@+id/signinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginStart="80dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/sign_up_google"/>
    <TextView
        android:id="@+id/loginInTextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/signinText"
        android:layout_marginStart="@dimen/view_padding"
        android:layout_marginTop="@dimen/layout_margin"
        android:text="@string/log_in"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/sign_up_google"
        />


</androidx.constraintlayout.widget.ConstraintLayout>