<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kejaplus.application.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_propertyDetailsFragment"
            app:destination="@id/propertyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_addProperty"
        android:name="com.kejaplus.application.ui.AddProperty.AddPropertyFragment"
        android:label="@string/add_property"
        tools:layout="@layout/fragment_add_property">
        <action
            android:id="@+id/action_navigation_addProperty_to_addPropertyTwoFragment"
            app:destination="@id/addPropertyTwoFragment" />
        <action
            android:id="@+id/action_navigation_addProperty_to_mapsFragment"
            app:destination="@id/mapsFragment" />

    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.kejaplus.application.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/addPropertyTwoFragment"
        android:name="com.kejaplus.application.ui.AddProperty.AddPropertyTwoFragment"
        android:label="fragment_add_property_two"
        tools:layout="@layout/fragment_add_property_two">
        <argument
            android:name="property_type"
            app:argType="string" />
        <argument
            android:name="no_bedrooms"
            app:argType="string" />
        <argument
            android:name="location"
            app:argType="string" />
        <argument
            android:name="image_url"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.kejaplus.application.ui.Map.MapsFragment"
        android:label="Search Location"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_navigation_addProperty"
            app:destination="@id/navigation_addProperty"
            app:popUpTo="@id/navigation_addProperty"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/propertyDetailsFragment"
        android:name="com.kejaplus.application.ui.AddProperty.PropertyDetailsFragment"
        android:label="Property Details" >
        <argument
            android:name="propertyName"
            app:argType="string" />
        <argument
            android:name="propertyType"
            app:argType="string" />
        <argument
            android:name="propertyDesc"
            app:argType="string" />
        <argument
            android:name="propertyCondition"
            app:argType="string" />
        <argument
            android:name="propertyLocation"
            app:argType="string" />
        <argument
            android:name="price"
            app:argType="string" />
        <argument
            android:name="propertyCategory"
            app:argType="string" />
    </fragment>

</navigation>